Added the funcionality to update the map based on the IP address entered, and getting the IP address when the page loads I think it is working

--- a/css/main.css
+++ b/css/main.css
@@ -370,7 +370,7 @@ body {
 
 .mapContainer {
   position: relative;
-  background: green;
+  background: whitesmoke;
   z-index: 1;
   height: 100%;
 }
