--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -18,7 +18,7 @@ body {
 
 .mapContainer {
   position: relative;
-  background: green;
+  background: whitesmoke;
   z-index: 1;
   height: 100%;
 }
