--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,7 +1,7 @@
 .header {
   height: 20rem;
   width: 100%;
-  background: url("/images/pattern-bg.png") no-repeat;
+  background: url("../images/pattern-bg.png") no-repeat;
   background-size: cover;
   font-size: 3.5rem;
   color: whitesmoke;
