--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -36,7 +36,7 @@
       width: 50rem;
       box-shadow: 0px 0px 10px rgba($color: $colorPrimaryDark, $alpha: 0.3);
       font-size: 2rem;
-      @include responsiveMax($phone-mini) {
+      @include responsiveMax($phone) {
         width: 20rem;
 
         &::placeholder {
