--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap");
+.hide {
+  opacity: 0;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
 html,
 body,
 div,
@@ -354,6 +360,22 @@ html {
 }
 
 #map {
+  height: 100%;
+}
+
+.spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  z-index: 2322312312;
+  width: 50px;
+  height: 50px;
+}
+
+.spinner .spinner img {
+  width: 100%;
   height: 100%;
 }
 
